--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^11.10.0",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
+    "react-chat-elements": "^12.0.18",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
